js/js.translator/testData/incremental/invalidation/interfaceOpenMethods/lib1/InterfaceB.0.kt
interface B : A {
    fun testB1() = 2
}
